--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "lucide-react": "^0.292.0",
+    "react": "^18.2.0",
     "react-router-dom": "^6.20.0"
   }
 }
