--- a/nsb-site/package.json
+++ b/nsb-site/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "firebase": "^10.7.1",
     "lucide": "^0.294.0",
     "lucide-react": "^0.294.0",
